--- a/style.css
+++ b/style.css
@@ -5,11 +5,27 @@
   font-family: Arial, sans-serif;
 }
 body {
-  background-color: #0f172a;
+  background: linear-gradient(30deg, #050b27,#0e2558,#362948, #0e2558, #1b1322);
+    background-size: 300% 300%;
+  animation: gradientMove 5s ease infinite;
   color: white;
 }
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
-
+#prepforge{
+  width: 200px;
+  margin-top: 20px;
+}
 .navbar {
   background-color: #020617;
   padding: 15px 40px;
@@ -71,7 +87,8 @@ body {
 }
 
 .btn-primary:hover {
-  background-color: #1d4ed8;
+  background: linear-gradient(60deg, #c10d00,rgb(232, 91, 91));
+  color: black;
 }
 
 .btn-outline {
@@ -83,10 +100,7 @@ body {
   font-weight: bold;
 }
 
-.btn-outline:hover {
-  background-color: #38bdf8;
-  color: black;
-}
+
 
 .pillars {
   display: flex;
@@ -121,6 +135,9 @@ body {
   background-color: #020617;
   padding: 15px;
   margin-top: 40px;
+  width: 100%;
   font-size: 14px;
-  opacity: 0.8;
+  opacity: 1;
+  bottom: 0px;
+  position: fixed;
 }
